# estate_agent

./: .design-canvas-url  .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  Property-Agency-Website-Implementation-Spec.md  README.md  design-prompt.md  design-requirements.md  designer-todo-sprint-01.md  designer-todo.md  dev-prompt.md  dev-todo-sprint-01.md  dev-todo.md  motion-spec.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
apps/next/: README.md
apps/web/: README.md  eslint.config.js  middleware.test.ts  middleware.ts  next.config.ts  package.json  payload-modules.d.ts  payload-types.ts  payload.config.ts  playwright.config.ts  proxy.test.ts  proxy.ts  redirect-consult.test.ts  redirect-consult.ts  security-headers.test.ts  security-headers.ts  tailwind.config.ts  tenant-host.test.ts  tenant-host.ts  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
apps/workers/: README.md  package.json  tsconfig.json  vitest.config.ts
audit/: audit-report.md  master-prompt-log.md
design-briefs/v1/: EPIC-A-executive-summary.md  EPIC-AA-tenant-portal.md  EPIC-AB-platform-operator-admin.md  EPIC-AC-feedback-reviews.md  EPIC-AD-feature-packs.md  EPIC-AE-platform-marketing-site.md  EPIC-B-feature-audit.md  EPIC-C-public-pages-sitemap.md  EPIC-D-backend-configurable.md  EPIC-E-static-info.md  EPIC-F-property-data.md  EPIC-G-repair-system.md  EPIC-H-admin-dashboard.md  EPIC-I-crm-workflow.md  EPIC-J-data-requirements.md  EPIC-K-interface-capabilities.md  EPIC-L-frontend-components.md  EPIC-M-design-system.md  EPIC-N-security-gdpr.md  EPIC-O-seo.md  EPIC-P-technology-requirements.md  EPIC-Q-build-roadmap.md  EPIC-R-cross-cutting.md  EPIC-S-hosting-multi-tenancy.md  EPIC-T-customer-accounts.md  EPIC-U-workers-scheduled-tasks.md  EPIC-V-portal-syndication.md  EPIC-W-calculators.md  EPIC-X-bulk-import.md  EPIC-Y-vendor-portal.md  EPIC-Z-landlord-portal.md
design/canvas/: .design-canvas-url  canvas.js  tokens.css  (+1 more)
docs/: sub-processors.json
infrastructure/: README.md
services/django/: README.md  pyproject.toml
(+733 files in other folders)
